# forge-autodoc

./: .gitmodules  README.md  pyproject.toml
examples/: build-fa-tutorials.host.example.sh  fa-handbook.host.example.yaml  handbook.example.yaml
forge_autodoc/: __init__.py  __main__.py  assets.py  config.py  files.py  ks_path.py  markdown_conv.py  page.py  sidebar.py  simple_build.py  text.py  transforms_api.py
tests/: test_markdown_pipeline.py
