[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-autodoc"
version = "0.1.0"
description = "Build static technical handbooks from Markdown using Forge Kitchensink layouts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "markdown>=3.4",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
forge-autodoc = "forge_autodoc.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["forge_autodoc*"]
